# glib-schannel

./: meson.build
tls/base/: meson.build
tls/schannel/: gioschannel.h  gioschannel.vapi  gtlscertificate-schannel.c  gtlsclientconnection-schannel.c  gtlsdatabase-schannel.c  gtlsutils-schannel.c  meson.build
